--- a/style.css
+++ b/style.css
@@ -101,11 +101,21 @@ section .card .day {
 }
 
 section.attendance {
+    visibility: hidden;
+    transform: scale(0);
+    opacity: 0;
     position: fixed;
     inset: 0;
     background-color: #eee;
     padding: 20px;
+    transition: visibility 0.4s ease, transform 0.2s ease, opacity 0.4s ease-in;
 }
+
+/* .visible {
+    visibility: visible;
+    transform: scale(1);
+    opacity: 1;
+} */
 
 section.attendance .container {
     margin: 0 auto;
