--- a/style.css
+++ b/style.css
@@ -9,7 +9,13 @@
 html {
     scroll-behavior: smooth;
 }
-
+h1{
+    font-size: 40px;
+    font-weight: 600;
+    margin-bottom: 10px;
+    display: block;
+    text-align: center;
+}
 body {
     width: 100%;
     font-family: Arial, Helvetica, sans-serif;
@@ -178,7 +184,25 @@ section.attendance .headings, .user-details {
     color: #fff;
     background-color: #28b05c8c;
 }
+.btn button{
+    padding: 12px;
 
+    color: #fff;
+    background-color: #673cc2;
+    border-radius: 8px;
+    cursor: pointer;
+}
+.btn{
+    margin: 0 0 20px;
+    display: flex;
+    gap: 10px;
+    justify-content: center;
+    margin: 0 auto;
+    padding: 0 10px;
+    height: 70px;
+    align-items: center;
+    max-width: 1024px;
+}
 /* footer {
     background-color: #222;
 }
