--- a/style.css
+++ b/style.css
@@ -9,13 +9,6 @@
 html {
     scroll-behavior: smooth;
 }
-h1{
-    font-size: 40px;
-    font-weight: 600;
-    margin-bottom: 10px;
-    display: block;
-    text-align: center;
-}
 body {
     width: 100%;
     font-family: Arial, Helvetica, sans-serif;
@@ -41,12 +34,25 @@ header {
     max-width: 1024px;
 }
 
+h1{
+    font-size: 40px;
+    font-weight: 600;
+    margin-bottom: 10px;
+    display: block;
+    text-align: center;
+}
+
 button.admin-login-btn {
     padding: 12px;
     color: #fff;
     background-color: #673cc2;
     border-radius: 8px;
     cursor: pointer;
+}
+
+button.admin-login-btn a {
+    text-decoration: none;
+    color: inherit;
 }
 
 main {
