--- a/style.css
+++ b/style.css
@@ -190,25 +190,30 @@ section.attendance .headings, .user-details {
     color: #fff;
     background-color: #28b05c8c;
 }
-.btn button{
-    padding: 12px;
 
+.attendance .info {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.info .contact-btn button {
+    padding: 14px;
     color: #fff;
     background-color: #673cc2;
     border-radius: 8px;
     cursor: pointer;
 }
-.btn{
-    margin: 0 0 20px;
-    display: flex;
-    gap: 10px;
-    justify-content: center;
-    margin: 0 auto;
-    padding: 0 10px;
-    height: 70px;
-    align-items: center;
-    max-width: 1024px;
+
+.info .date-container {
+    font-size: 0.85em;
+    text-align: center;
 }
+
+.info h4 {
+    font-size: 1.5em;
+}
+
 /* footer {
     background-color: #222;
 }
